# NORFlashEmulator

./: .gitignore  CMakeLists.txt  README.md  main.c  nor_flash_emulator.c  nor_flash_emulator.h  tests.c
test/: deinit_tests.c  init_tests.c  main.c  read_tests.c  read_write_tests.c
